Integrate image scan
