# api/rest-swagger/models/scan_response.go
@@ -1,0 +1,167 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+	"strconv"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// ScanResponse scan response
+//
+// swagger:model scanResponse
+type ScanResponse struct {
+
+	// product counts
+	ProductCounts []*ProductCount `json:"productCounts"`
+
+	// products
+	Products []*Product `json:"products"`
+}
+
+// Validate validates this scan response
+func (m *ScanResponse) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateProductCounts(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateProducts(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ScanResponse) validateProductCounts(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.ProductCounts) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.ProductCounts); i++ {
+		if swag.IsZero(m.ProductCounts[i]) { // not required
+			continue
+		}
+
+		if m.ProductCounts[i] != nil {
+			if err := m.ProductCounts[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("productCounts" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *ScanResponse) validateProducts(formats strfmt.Registry) error {
+
+	if swag.IsZero(m.Products) { // not required
+		return nil
+	}
+
+	for i := 0; i < len(m.Products); i++ {
+		if swag.IsZero(m.Products[i]) { // not required
+			continue
+		}
+
+		if m.Products[i] != nil {
+			if err := m.Products[i].Validate(formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("products" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// ContextValidate validate this scan response based on the context it is used
+func (m *ScanResponse) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.contextValidateProductCounts(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.contextValidateProducts(ctx, formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *ScanResponse) contextValidateProductCounts(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.ProductCounts); i++ {
+
+		if m.ProductCounts[i] != nil {
+			if err := m.ProductCounts[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("productCounts" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+func (m *ScanResponse) contextValidateProducts(ctx context.Context, formats strfmt.Registry) error {
+
+	for i := 0; i < len(m.Products); i++ {
+
+		if m.Products[i] != nil {
+			if err := m.Products[i].ContextValidate(ctx, formats); err != nil {
+				if ve, ok := err.(*errors.Validation); ok {
+					return ve.ValidateName("products" + "." + strconv.Itoa(i))
+				}
+				return err
+			}
+		}
+
+	}
+
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ScanResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ScanResponse) UnmarshalBinary(b []byte) error {
+	var res ScanResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
